--- a/consul/init/systemd/consul.service
+++ b/consul/init/systemd/consul.service
@@ -10,6 +10,7 @@ Restart=on-failure
 User=consul
 ExecStart={{install_dir}}/{{datacenter}}/bin/consul agent -config-dir {{install_dir}}/{{datacenter}}/config -data-dir {{install_dir}}/{{datacenter}}/data
 ExecReload=/bin/kill -HUP $MAINPID
+ExecStopPost=/bin/rm -f {{install_dir}}/{{datacenter}}/data
 KillSignal=SIGTERM
 
 [Install]
